--- a/install-docker.yaml
+++ b/install-docker.yaml
@@ -15,6 +15,9 @@
     - name: add docker gpg key
       apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
+        state: present
+        keyring: /etc/apt/keyrings/docker.gpg
+    - name: add docker repository
       apt_repository:
         filename: docker 
         repo: deb [arch=amd64 signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu {{ ansible_lsb.codename|lower }} stable
